Added an edit-image endpoint
